--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT = 4040
 MONGOURL = 'mongodb://0.0.0.0:27017/'
 DBNAME = 'E-Commerce-DB'
 SECRETE_KEY = "tekisky"
+NODE_ENV = developement
+CLOUDINARY_NAME = dgz5kx9zn
+CLOUDINARY_API_KEY = 364794259364794
+CLOUDINARY_SECRETE = otmzieec--ahzk9DvmH5YAoyOD8
